--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
+<h1>God of War but its romantic</h1>
+<p>
+    It was a cold afternoon in Midgard, after all snow is all there is in that kingdom. Atreus had left for a while now
+    and Kratos had enough of Mimir's riddle for the rest of the Ragnarok and, kind of guided more from boredom than rage, Kratos
+    decided to go for a ride in his sled.
+</p>
 </body>
 </html>
