Added first story scenes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
 </head>
 <body>
-<h1>God of War but its romantic</h1>
+<h1>Escape from Novigrad's sewers</h1>
+
 <p>
-    It was a cold afternoon in Midgard, after all snow is all there is in that kingdom. Atreus had left for a while now
-    and Kratos had enough of Mimir's riddle for the rest of the Ragnarok and, kind of guided more from boredom than rage, Kratos
-    decided to go for a ride in his sled.
+You wake up soggy and tired, feeling like a trol had jumped on you. When you open your eyes all you can see is a
+lit torch. Somehow you ended up in Novigrads sewers, you dont remember how you got there, but you do know one thing, you need to get out.
 </p>
+<img  src = "./images/entrance.png" alt "You are in the sewers" width="500" height="300">
+<p> 
+All of a sudden all those stories from people gettin in the sewers and never coming back get on your head and you start trembling. After that moment of panic, 
+you get emboldened, pick up the torch and decide to get out of there before the drowners get to you.
+
+As you walk you find out the trail splits up, you have to make a choice, do you turn left or right?
+</p>
+<hr>
+<ul>
+<li><a href="./first_decision/pick_sword.html">A. Left path</a></li>
+<li><a href="./first_decision/drowner_encounter.html">B. Right path</a></li>
+</ul>
 </body>
 </html>
