Adding more scenes

--- a/first_decision/drowner_encounter.html
+++ b/first_decision/drowner_encounter.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>This is getting violent isn't it?</title>
 </head>
 <body>
+<header>
+<a href="../index.html">Restart</a>
+</header>
+
 <h1>Oh no... Drowners</h1>
 
+<img src = "../images/drowners.webp"  alt = "Right path image" width ="500" height="300" >
+<hr>
+
+<p>
+    You keep walking in a long and stinky path through the sewers. There are some grates every now and then. You try to scream for help
+    but its useless, no one will get in the sewers to save a simple man. You start to think that it wasn't the best idea to come
+    to Novigrad and sell shoes... You really want to get out of there. When you are almost lost on your thoughts, you hear a shriek near by.
+    You're scared, but the only path you can see is where the shriek came from, so you walk as all of your body trembles.
+    You get to a room where its easily recognizable that illegal fights take place. But there is no time to think about the morality of 
+    that business, a drowner noticed you and is rapidly coming after you. Do you have a sword?
 </p>
+    <hr>
+
+<img src = "../images/combat.jpg" alt = "Fighting a drowner" width ="500" height="300" >
+
+    <ul>
+        <li><a href="./second_decision/no_sword/last_chance.html">A. No</a> </li>
+        <li><a href="./second_decision/sword/continue.html">A. Yes</a> </li> 
+    </ul>
+
 </body>
 </html>
