--- a/first_decision/pick_sword.html
+++ b/first_decision/pick_sword.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> A sword? For me? Thank you</title>
 </head>
 <body>
+<header>
+<a href="../index.html">Restart</a>
+</header>
 <h1>Great, you found a Sword!</h1>
 <p>
     As you continue through the left path, you get to a room where some bandit used to live, there's his bed, small furniture
