--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Welcome to Novigrad's sewers</title>
 </head>
 <body>
 <h1>Escape from Novigrad's sewers</h1>
