Adding more scenes

--- a/first_decision/second_decision/no_sword/last_chance.html
+++ b/first_decision/second_decision/no_sword/last_chance.html
@@ -19,7 +19,7 @@
         <img src = "../../../images/no_sword_encounter.webp" alt = "Drowner encounter without a sword" width = "500" height = "300">
         <ul>
         <br>
-            <li><a href = "./">A. Try to dodge the drowner and run to the next path.</a></li>
-            <li><a href = "./">B. Run back with hope.</a></li>
+            <li><a href = ".//bandit_encounter/bandit.html">A. Try to dodge the drowner and run to the next path.</a></li>
+            <li><a href = "./game_over.html">B. Run back with hope.</a></li>
     </body>
 </html>
