--- a/first_decision/second_decision/no_sword/bandit_encounter/bandit.html
+++ b/first_decision/second_decision/no_sword/bandit_encounter/bandit.html
@@ -10,6 +10,7 @@
 
         <h1>Another enemy approaches...</h1>
         <hr>
+        
         <p>
             Your reflexes had always been pretty good, when the drowner attacks with its claws, you dodge it, getting yourself in the back of the drowner. The drowner immediately notices it
             and rapidly turns around. By the time it did it completely, you already started running to the path with light ahead.
@@ -18,10 +19,10 @@
             You know what's behind you... What do you do?
         </p>
         <hr>
-        <img src = "../../../../images/no_sword_bandit.jpg" alt = "Bandit encounter" width = "500" height = "300">
+        <img src = "../../../../../images/no_sword_bandit.jpg" alt = "Bandit encounter" width = "500" height = "300">
         <ul>
         <br>
-            <li><a href = ".//bandit_encounter/bandit.html">A. Try to dodge the drowner and run to the next path.</a></li>
-            <li><a href = "./game_over.html">B. Run back with hope.</a></li>
+            <li><a href = "./end/bad_ending.html">A. Convince him to help you defeat the drowner.</a></li>
+            <li><a href = "./end/good_ending.html">B. Keep running.</a></li>
     </body>
 </html>
