--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 You wake up soggy and tired, feeling like a trol had jumped on you. When you open your eyes all you can see is a
 lit torch. Somehow you ended up in Novigrads sewers, you dont remember how you got there, but you do know one thing, you need to get out.
 </p>
-<img  src = "./images/entrance.png" alt "You are in the sewers" width="500" height="300">
+<img  src = "./images/entrance.png" alt = "You are in the sewers" width="500" height="300">
 <p> 
 All of a sudden all those stories from people gettin in the sewers and never coming back get on your head and you start trembling. After that moment of panic, 
 you get emboldened, pick up the torch and decide to get out of there before the drowners get to you.
