--- a/first_decision/second_decision/sword/continue.html
+++ b/first_decision/second_decision/sword/continue.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Back in action</title>
     </head>
     <body>
+        <header>
+            <a href="../../../index.html">Restart</a>
+        </header>
+
+        <h1>Back in action </h1>
+        <hr>
+        <p>
+            You are ready for the drowner thanks to the sword you found in the previous area. You swing your sword directly to the drowners neck but miss. Now you're exposed
+            and the drowner takes the chance to scratch you, fortunatelly, it only got your clothes as you moved right on time. You realize the drowner started to throw scratches and you need to
+            move quickly behind. Every scratch gets closer to you and somehow you manage to avoid them all, costing you some claws on your shirt. Finally, the drowner has got its guard down and its your
+            moment to attack, you swing the sword with all you've got to the drowners head and finally get rid of him.
+        </p>
+        <hr>
+        <br>
+        <img src = "../../../images/sword_drowner.webp" alt = "Defeated the drowner" width = "500" height = "300">
+        <br>
+        <ul>
+            <li><a href = "./bandit_encounter_sword/bandit_sword.html">Continue</a></li>
+        </ul>
+
     </body>
 </html>
