--- a/first_decision/pick_sword.html
+++ b/first_decision/pick_sword.html
@@ -20,5 +20,6 @@
     <hr>
     <ul>
         <li><a href="../first_decision/drowner_encounter.html">Back to the right path</a></li>
+        <li><a href="../index.html">Back to the beggining</li>
 </body>
 </html>
