--- a/index.html
+++ b/index.html
@@ -4,23 +4,56 @@
     <title>Welcome to Novigrad's sewers</title>
 </head>
 <body>
-<h1>Escape from Novigrad's sewers</h1>
+<main>
+    <header>
+        <h1>Escape from Novigrad's sewers</h1>
+    </header>
+    <article>
+            <section>
+                <p>
+                You wake up soggy and tired, feeling like a trol had jumped on you. When you open your eyes all you can see is a
+                lit torch. Somehow you ended up in Novigrads sewers, you dont remember how you got there, but you do know one thing, you need to get out.
+                </p>
+            </section>
 
-<p>
-You wake up soggy and tired, feeling like a trol had jumped on you. When you open your eyes all you can see is a
-lit torch. Somehow you ended up in Novigrads sewers, you dont remember how you got there, but you do know one thing, you need to get out.
-</p>
-<img  src = "./images/entrance.png" alt = "You are in the sewers" width="500" height="300">
-<p> 
-All of a sudden all those stories from people gettin in the sewers and never coming back get on your head and you start trembling. After that moment of panic, 
-you get emboldened, pick up the torch and decide to get out of there before the drowners get to you.
+            <details>
+                <summary>What is novigrad?</summary>
+                    <aside>
+                    <i>Novigrad is a city from The Witcher universe, located in Redania, renowned as the largest, richest and most influential port on the
+                    Northern Continent</i>
+                    </aside>
+            </details>
 
-As you walk you find out the trail splits up, you have to make a choice, do you turn left or right?
-</p>
-<hr>
-<ul>
-<li><a href="./first_decision/pick_sword.html">A. Left path</a></li>
-<li><a href="./first_decision/drowner_encounter.html">B. Right path</a></li>
-</ul>
+            <figure>
+                <img  src = "./images/entrance.png" alt = "You are in the sewers" width="500" height="300">
+                <figcaption>Hidden place in Novigrads Sewers</figcaption>
+            </figure>
+
+            <section>
+                <p> 
+                All of a sudden all those stories from people gettin in the sewers and never coming back get on your head and you start trembling. After that moment of panic, 
+                you get emboldened, pick up the torch and decide to get out of there before the drowners get to you.
+
+                <details>
+                <summary>What is a drowner?</summary>
+                    <aside>
+                    <i>Drowners in The Witcher are common, amphibious necrophage monsters that inhabit lakeshores, rivers, swamps, and sewers. They appear as emaciated, slimy, bluish-green humanoids with gills, often hunting in packs to drag unsuspecting travelers and swimmers into the watert</i>
+                    </aside>
+                </details>
+                <br>As you walk you find out the trail splits up, you have to make a choice, do you turn left or right?
+                </p>
+            </section>
+        </article>
+        <nav>
+            <ul>
+            <li><a href="./first_decision/pick_sword.html">A. Left path</a></li>
+            <li><a href="./first_decision/drowner_encounter.html">B. Right path</a></li>
+            </ul>
+        </nav>
+
+        <footer>
+            <p>&emsp; <time>22:00</time> - It's late already</p>
+        </footer>
+</main>
 </body>
 </html>
