Refactoring found sword page

--- a/first_decision/pick_sword.html
+++ b/first_decision/pick_sword.html
@@ -5,21 +5,54 @@
 </head>
 <body>
 <header>
-<a href="../index.html">Restart</a>
+    <h1>Great, you found a Sword!</h1>
 </header>
-<h1>Great, you found a Sword!</h1>
-<p>
-    As you continue through the left path, you get to a room where some bandit used to live, there's his bed, small furniture
-    and some sacks. You search around to see if there is something useful...
-    <img src = "../images/bandits_home.jpg" alt = "The bandits home" width ="500" height="300">
-    <hr>
-    Its your lucky day! You found a sword in the bandits sacks. You take it with you, the sewers are a dangerous place to be unarmed.
-    You can't keep going through this path, so you   decide to go back and take the left path.
-</p>
-     <img src ="../images/sword.jpg" alt = "Brand new sword for you" width ="500" height="300">
-    <hr>
-    <ul>
-        <li><a href="../first_decision/drowner_encounter.html">Back to the right path</a></li>
-        <li><a href="../index.html">Back to the beggining</li>
+<main>
+    <article>
+        <section>
+        <p>
+        As you continue through the left path, you get to a room where some bandit used to live, there's his bed, small furniture
+        and some sacks. You search around to see if there is something useful...
+        </p>
+        </section>
+        <details>
+            <summary>Bandits in Novigrad</summary>
+                <aside>
+                    <i> Novigrad city is one of the richest around the world. Of course, so much money often attracts different types of people.
+                        From simple farmers who want a better life working for the nobles to the hated bandits who spend the nights robbing and threatening rich people and 
+                        others even the poor ones.</i>
+                </aside>
+        </details>
+
+        <figure>
+            <img src = "../images/bandits_home.jpg" alt = "The bandits home" width ="500" height="300">
+            <figcaption>A bandits home under Novigrad city</figcaption>
+        </figure>
+
+        <section>
+            <p>
+                Its your lucky day! You found a sword in the bandits sacks. You take it with you, the sewers are a dangerous place to be unarmed.
+                You can't keep going through this path, what do you do now?
+            </p>
+        </section>
+        
+        <figure>
+            <img src ="../images/sword.jpg" alt = "Brand new sword for you" width ="500" height="300">
+            <figcaption>Now you can defend yourself from dangerous things in the sewers</figcaption>
+        </figure>
+    </article>
+</main>
+<nav>
+<ul>
+    <li><a href="../index.html">Back to the beggining</li>
+    <br>
+    <li><a href="../index.html">Restart</a></li>
+</ul>
+</nav>
+<footer>
+    <p>&emsp; <time>22:10</time> - Keep going!</p>
+    <label for="file">You are this close out of Novigrads's sewers:</label>
+    <progress id="file" value="15" max="100"> 15% </progress>
+</footer>
 </body>
 </html>
